--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -1,7 +1,7 @@
 <app-navbar></app-navbar>
 <section>
     <div class="flex justify-center h-full">
-        <div class="container flex justify-center h-full">
+        <div class="w-full flex justify-center h-full">
             <div class="w-full">
                 <div class="w-full h-20 bg-primary flex justify-center items-center">
                     <h2 class=" text-white text-4xl font-bold">
