--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -192,8 +192,8 @@
                                         <p class="w-full text-center px-3">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
                                     </td>
                                     <td class="lg:w-[50%] w-[34%]">
-                                        <div class="w-full hidden lg:flex lg:justify-end lg:mx-0" routerLink="/tabellino"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
-                                        <div class="w-full flex lg:hidden lg:justify-end lg:mx-0" routerLink="/tabellino"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1 w-full">TAB</button></div>
+                                        <div class="w-full hidden lg:flex lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
+                                        <div class="w-full flex lg:hidden lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1 w-full">TAB</button></div>
                                     </td>
                                 </tr>
                             </tbody>
