--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -52,84 +52,84 @@
                         <div class="w-full h-auto border-t-4 border-white">
                             <div class="w-full flex flex-wrap justify-center mt-8 mb-8">
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Partite Giocate</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.games}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Partite Giocate</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.games}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Punti Segnati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.points}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Punti Segnati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.points}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Realizzati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fgm}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Tiri Realizzati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.fgm}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Tentati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fga}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Tiri Tentati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.fga}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Percentuale al Tiro</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fgp}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Percentuale al Tiro</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.fgp}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Liberi Segnati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.ftm}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Tiri Liberi Segnati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.ftm}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri Liberi Tentati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.fta}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Tiri Liberi Tentati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.fta}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Percentuale ai Liberi</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.ftp}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Percentuale ai Liberi</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.ftp}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri da Tre punti Segnati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.tpm}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Tiri da Tre punti Segnati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.tpm}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Tiri da Tre punti Tentati</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.tpa}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Tiri da Tre punti Tentati</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.tpa}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Percentuale da Tre Punti</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.tpp}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Percentuale da Tre Punti</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.tpp}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Rimbalzi Offensivi</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.offReb}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Rimbalzi Offensivi</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.offReb}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Rimbalzi Difensivi</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.defReb}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Rimbalzi Difensivi</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.defReb}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Rimbalzi Totali</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.totReb}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Rimbalzi Totali</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.totReb}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Assists</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.assists}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Assists</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.assists}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Palle Rubate</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.steals}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Palle Rubate</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.steals}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Palle Perse</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.turnovers}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Palle Perse</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.turnovers}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Stoppate</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.blocks}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Stoppate</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.blocks}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Plus/Minus di Squadra</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.plusMinus}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Plus/Minus di Squadra</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.plusMinus}}</p>
                                 </div>
                                 <div class="w-[25%] flex flex-wrap mb-4 mt-4 justify-center">
-                                    <p class="w-[60%] h-12 flex justify-center mb-1 bg-blue-300 font-bold items-center">Falli di Squadra</p>
-                                    <p class="w-[60%] flex justify-center bg-white">{{teamStatistics?.pfouls}}</p>
+                                    <p class="lg:w-[60%] w-full h-12 flex justify-center mr-1 ml-1 mb-1 bg-blue-300 font-bold lg:text-base text-xs text-center items-center">Falli di Squadra</p>
+                                    <p class="lg:w-[60%] w-full ml-1 mr-1 flex justify-center bg-white">{{teamStatistics?.pfouls}}</p>
                                 </div>
                             </div>
                         </div>
@@ -163,7 +163,7 @@
                                         <p class="lg:block w-full hidden text-center px-3">RISULTATO</p>
                                         <p class="lg:hidden text-center px-3">RIS</p>
                                     </th>
-                                    <th class="lg:w-[15%] w-[56%]">
+                                    <th class="lg:w-[15%] w-[60%]">
                                         <p class="lg:block w-full hidden text-center px-3">PUNTEGGIO</p>
                                         <p class="lg:hidden text-center px-3">PTS</p>
                                     </th>
@@ -188,10 +188,10 @@
                                         <p class="w-full text-center px-3" *ngIf="match?.codeAway === teamStatistics!.team.code && (match?.scoreTeamAway !== undefined && match?.scoreTeamHome !== undefined && match!.scoreTeamHome > match!.scoreTeamAway)">L</p>
                                    </td>
                                     
-                                    <td class="lg:w-[10%] w-[56%]">
-                                        <p class="w-full text-center px-3">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
+                                    <td class="lg:w-[10%] w-[60%]">
+                                        <p class="w-full text-center">{{match?.scoreTeamAway}}-{{match?.scoreTeamHome}}</p>
                                     </td>
-                                    <td class="lg:w-[50%] w-[34%]">
+                                    <td class="lg:w-[50%] w-[30%]">
                                         <div class="w-full hidden lg:flex lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1">TABELLINO</button></div>
                                         <div class="w-full flex lg:hidden lg:justify-end lg:mx-0" [routerLink]="['/tabellino',match?.gameid]"><button class="bg-primary h-14 lg:px-10 px-2 rounded-xl text-white mb-1 w-full">TAB</button></div>
                                     </td>
