--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -33,6 +33,7 @@
 
                         </div>
                     </div>
+                    <div class="w-[10px] h-full bg-black ml-20 mr-20"></div>
                     <div class="mx-10 flex items-center">
                         <ul>
                             <li class="p-2 text-xl font-bold">Nome</li>
