--- a/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
+++ b/NBA/src/app/views/squadra-detail-page/squadra-detail-page.component.html
@@ -39,14 +39,8 @@
                         <div class="w-1/2 h-28 border-l-2 border-white text-white flex flex-wrap justify-center items-center bg-primary">
                             <ul class="px-8">
                                 <li class="lg:w-full w-full h-1/2 text-sm">
-                                    <p class="lg:text-xl text-xs"><b class="lg:text-2xl text-sm">Città</b><span>:</span> {{teamStatistics!.team.city}}</p>
+                                    <p class="lg:text-2xl text-xs"><b class="lg:text-2xl text-sm">Città</b><span>:</span> {{teamStatistics!.team.city}}</p>
                                 </li>
-                                <!-- <li class="lg:w-full w-full h-1/2 text-sm">
-                                    <p class="lg:text-xl text-xs"><b class="lg:text-2xl text-sm">Località</b><span>:</span>
-                                        Boston, Massachusetts, Stati Uniti,
-                                        New Egland, Stati Uniti
-                                    </p>
-                                </li> -->
                             </ul>
                         </div>
                         <div class="w-full h-auto border-t-4 border-white">
@@ -232,8 +226,6 @@
                                     <p class="w-full text-center">Età:{{player.birthDate}} </p>
                                     <p class="w-full text-center">Paese di Nascita:{{player.birthCountry}} </p>
                                     <p class="w-full text-center">Altezza e peso:{{player.heightMeters}} {{player.weightKg}}</p>
-                                    <!-- <p class="w-full text-center">Punti e canestri:{{player.}}</p>
-                                    <p class="w-full text-center">Minuti:{{player.}}</p> -->
                                 </div>
                             </div>
                             <div class="lg:w-1/3 w-full h-full border-primary flex justify-center flex-wrap">
