--- a/NBA/src/app/views/profilo-page/profilo-page.component.html
+++ b/NBA/src/app/views/profilo-page/profilo-page.component.html
@@ -90,8 +90,8 @@
                     </div>
                     <div class="w-full h-6 bg-secondary"></div>
                     <div class="w-full flex flex-wrap justify-between my-10">
-                        <div class="w-[30%] rounded-md mx-2 my-4 border-blue-900" *ngFor="let _ of ripetiArray, let i = index"> 
-                            <div class="w-full h-[3/4] bg-secondary flex flex-wrap p-4">
+                        <div class="w-[30%] mx-2 my-4 border-solid border-[#1671AA]" *ngFor="let _ of ripetiArray, let i = index"> 
+                            <div class="w-full h-[3/4]  bg-secondary rounded-t-md flex flex-wrap p-4">
                                 <div class="w-full flex flex-nowrap">
                                     <div class="w-20 h-20 rounded-full bg-slate-500 ml-4">
 
@@ -108,8 +108,8 @@
                                     <div class="w-full lg:text-md text-white ">POSIZIONE IN CLASSIFICA: 70°</div>
                                 </div>   
                             </div>
-                            <div class="w-full h-[1/4] bg-white flex justify-center ">
-                                <button class="w-[50%] rounded-md border-blue-900">SEGUI</button>
+                            <div class="w-full h-[1/4] bg-white border-solid border-[#1671AA] rounded-b-md flex justify-center items-center">
+                                <button class="w-[25%] rounded-md border-2 my-1 border-blue-900">SEGUI</button>
                             </div>
                         </div>
                     </div>
