--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -46,7 +46,7 @@
                 <ul class="hidden md:flex justify-around md:items-center h-full text-white">
                     <li routerLink="/home"><button>NBA</button></li>
                     <li routerLink="/classifica"><button>CLASSIFICA</button></li>
-                    <li [routerLink]="['/calendario',dateToday]" (click)="stampa()"><button>CALENDARIO</button></li>
+                    <li [routerLink]="['/calendario',dateToday]"><button>CALENDARIO</button></li>
                     <li routerLink="/squadre"><button>SQUADRE</button></li>
                     <li [routerLink]="['/storia&regole','regole']"><button>REGOLE & GLOSSARIO</button></li>
                     <li routerLink="/blog"><button>BLOG</button></li>
@@ -61,7 +61,7 @@
                 <ul class="md:hidden mobile-menu bg-secondary w-full h-auto text-white absolute top-[64px] pl-4 pb-10" [class.hidden]="!isMobileMenuOpen">
                     <li routerLink="/home"><button>NBA</button></li>
                     <li routerLink="/classifica"><button>CLASSIFICA</button></li>
-                    <li [routerLink]="['/calendario',dateToday]" (click)="stampa()"><button>CALENDARIO</button></li>
+                    <li [routerLink]="['/calendario',dateToday]"><button>CALENDARIO</button></li>
                     <li routerLink="/squadre"><button>SQUADRE</button></li>
                     <li [routerLink]="['/storia&regole','regole']"><button>REGOLE & GLOSSARIO</button></li>
                     <li routerLink="/blog"><button>BLOG</button></li>
