--- a/NBA/src/app/components/partite-del-giorno-preview/partite-del-giorno-preview.component.html
+++ b/NBA/src/app/components/partite-del-giorno-preview/partite-del-giorno-preview.component.html
@@ -10,12 +10,12 @@
                     </span>
                 </button>
                 <div class="rounded-lg w-full h-full flex flex-nowrap justify-center">
-                    <div *ngFor="let card of cards; let i=index" [style.order]="calculateOrder(i)" class=" m-0 p-0" [ngClass]="{
+                    <div *ngFor="let card of cards; let i=index" [style.order]="calculateOrder(i)" class="w-1/3 m-0 p-0" [ngClass]="{
                                     'hidden w-0': (isMobile && currentIndex===i) || currentIndex !== i && currentIndexAfter !== i && currentIndexBefore !== i,
                                     'w-full': isMobile && currentIndex === i,
                             }" id={{i}}>
-                        <app-card-partita *ngIf="i===currentIndexBefore && isMobile" [gameId]="idgame" class="w-full"></app-card-partita>
-                        <app-card-partita *ngIf="!isMobile" [gameId]="idgame"></app-card-partita>
+                        <app-card-partita *ngIf="i===currentIndexBefore && isMobile" [gameId]="card" class="w-1/3"></app-card-partita>
+                        <app-card-partita *ngIf="!isMobile" [gameId]="card"></app-card-partita>
                     </div>
                 </div>
 
