--- a/NBA/src/app/views/home-page/home-page.component.html
+++ b/NBA/src/app/views/home-page/home-page.component.html
@@ -12,10 +12,9 @@
                     </h2>
                 </div>
                 <div class="w-full h-6 bg-secondary"></div>
-                <app-partite-del-giorno-preview class="w-full h-full my-10">
+                <app-partite-del-giorno-preview [cards]="matchToday" class="w-full h-full my-10">
 
                 </app-partite-del-giorno-preview>
-
             </div>
         </div>
     </div>
