--- a/NBA/src/app/components/card-partita/card-partita.component.html
+++ b/NBA/src/app/components/card-partita/card-partita.component.html
@@ -1,4 +1,4 @@
-<div class="w-full flex justify-center">
+<div class="w-full flex justify-center mt-5">
     <div class="w-[90%] h-72 flex flex-wrap justify-center">
         <div class="bg-[#DCF1FF] h-[80%] rounded-3xl flex flex-wrap justify-center">
             <div class="w-full h-1/5 flex justify-center items-center">
