--- a/NBA/src/app/views/calendario-page/calendario-page.component.html
+++ b/NBA/src/app/views/calendario-page/calendario-page.component.html
@@ -153,7 +153,7 @@
     <div  class="flex justify-center mt-10">
         <div class="container flex justify-center w-full">
             <div class="w-[90%] flex flex-wrap">
-                <div class="lg:w-1/3 w-full mb-5" *ngFor="let match of matchToday, let ind=index">
+                <div class="lg:w-1/3 w-full" *ngFor="let match of matchToday, let ind=index">
                     <div *ngIf="ind<cardToShow" class="">
                         <app-card-partita gameId={{match}}></app-card-partita>
                     </div>
@@ -161,7 +161,7 @@
                 <div class="w-full" *ngIf="matchToday.length==0">
                     <p class="w-full text-center font-bold text-2xl">Neesuna partita in programma!</p>
                 </div>
-                <div class="w-full h-auto mb-10 flex justify-center items-center" *ngIf="matchToday.length!=0">
+                <div class="w-full h-auto mb-10 flex justify-center items-center mt-5" *ngIf="matchToday.length!=0">
                     <button *ngIf="cardToShow==3" class="rounded-full bg-secondary lg:px-8 px-5 py-2 text-white font-bold text-sm lg:text-xl hover:underline" (click)="changeCardToShow(cardToShow)">
                         Scopri di più
                     </button>
