corretto sovrapposizioni login

--- a/NBA/src/app/components/login/login.component.html
+++ b/NBA/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap items-center justify-center h-full bg-gray-100">
+<div class="flex flex-wrap items-center justify-center h-full bg-gray-100 z-40">
   <div class="w-full flex justify-center">
     <form class="w-[80%] flex flex-wrap" (submit)="login()" >
       <div class="w-full flex justify-center">
