--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -78,7 +78,7 @@
                 </form>
             </div>
             <div class="h-16 lg:w-[10%] w-1/2 flex md:justify-center justify-end">
-                <button (click)="modal=!modal;" class="h-16 lg:w-2/4 w-[50%]">
+                <button (click)="modal=!modal" class="h-16 lg:w-2/4 w-[50%]">
                     <img src="./assets/icon/profilo-arancione-3.png" alt="" class="object-contain w-auto">
                 </button>
             </div>
