--- a/NBA/src/app/components/post-articolo/post-articolo.component.html
+++ b/NBA/src/app/components/post-articolo/post-articolo.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="extended===false" class="w-full my-5">
     <div class="w-full max-w-xl">
-        <div class="relative">
+        <div class="relative -z-10">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
                 <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
             </div>
-            <img class="z-0 top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
+            <img class="top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
             <div class="absolute bottom-0 h-auto w-full bg-primary">
                 <p class="font-bold text-xl flex items-center h-full px-4 py-2 text-white text-center w-full">MILWAUKEE BUCKS ANCORA IN VETTA</p>
             </div>
@@ -38,13 +38,13 @@
         </div>
     </div>
 </div>
-<div *ngIf="extended===true" class="hidden lg:block w-full my-10 relative">
+<div *ngIf="extended===true" class="hidden lg:block w-full my-10">
     <div class="w-full flex flex-nowrap h-full">
-        <div class="relative w-2/5">
+        <div class="relative -z-10 w-2/5">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
                 <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
             </div>
-            <img class="z-0 top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
+            <img class="top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
         </div>
         <div class="w-3/5 h-auto">
             <div class="h-full flex flex-col">
@@ -87,11 +87,11 @@
 </div>
 <div *ngIf="extended===true" class="lg:hidden w-full my-5">
     <div class="w-full max-w-xl">
-        <div class="relative">
+        <div class="relative -z-10">
             <div class="absolute top-4 h-12 w-full bg-gradient-to-r from-green-500 via-green-500 to-transparent">
                 <p class="font-bold text-3xl flex items-center h-full pl-4">TEAM</p>
             </div>
-            <img class="z-0 top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
+            <img class="top-0 h-full w-full" src="../../../assets/sfondo-home.png" alt="product image" />
             <div class="absolute bottom-0 h-auto w-full bg-primary">
                 <p class="font-bold text-xl flex items-center h-full px-4 py-2 text-white text-center w-full">MILWAUKEE BUCKS ANCORA IN VETTA</p>
             </div>
