--- a/NBA/src/app/components/classifica-component/classifica.component.css
+++ b/NBA/src/app/components/classifica-component/classifica.component.css
@@ -83,6 +83,7 @@
     position: relative;
     transition: all 0.3s ease;
     cursor: pointer;
+    z-index: -10;
 }
 
 .bottoni-classifica .heart-rollover label::before {
