--- a/NBA/src/app/components/classifica-component/classifica.component.html
+++ b/NBA/src/app/components/classifica-component/classifica.component.html
@@ -27,7 +27,7 @@
         </div>
         <div class="w-full flex flex-nowrap justify-end">
             <div *ngIf="percentageStanding==true && crescente==false && ControlChecked()==false" class="w-1/2 lg:w-auto flex justify-center lg:justify-end ">
-                <div class="flex items-center rounded-full lg:px-6 px-3 lg:py-1 text-sm bg-[#BAD5E6] opacity-50 ">
+                <div class="flex items-center rounded-full lg:px-6 px-3 lg:py-1 text-sm bg-[#BAD5E6] opacity-50 -z-10 ">
                     <p>RESET FILTRI</p>
                 </div>
             </div>
