--- a/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
+++ b/NBA/src/app/views/storia-e-regole-page/storia-e-regole-page.component.html
@@ -53,7 +53,7 @@
             <div class="w-full altezza h-32 flex justify-center mb-2 mt-12">
               <img
                 class="object-cover  w-full lg:h-full h-32 rounded-[25px]"
-                src="https://www.outpump.com/wp-content/uploads/2020/01/outpump-sport-logo-basketball-nba.jpg"
+                src="../../../assets/immagini sito/IMG_5217.webp"
                 alt=""
               />
             </div>
