estetica login mobile

--- a/NBA/src/app/components/navbar/navbar.component.html
+++ b/NBA/src/app/components/navbar/navbar.component.html
@@ -26,8 +26,8 @@
         </div>
     </div>
 </nav> -->
-<div *ngIf="modal===true" class="fixed top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full h-full flex justify-center items-center bg-[#acdeff81]">
-    <div class="w-[80%] h-[80%] bg-gray-100 border-4 border-primary">
+<div *ngIf="modal===true" class="fixed lg:top-1/2 top-[55%] left-1/2 transform -translate-x-1/2 -translate-y-1/2 w-full h-full flex justify-center items-center bg-[#acdeff81]">
+    <div class="w-[80%] lg:h-[80%] h-[85%] bg-gray-100 border-4 border-primary z-40">
         <app-login></app-login>
     </div>
 </div>
